@@ -1,3 +1,8 @@
+2008-11-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/37563
+	* g++.dg/template/pseudodtor5.C: New test.
+
 2008-11-19  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/38171
